# lib-python

./: Makefile  README.md  _pyproject.toml  pyproject.toml
.github/workflows/: publish-to-pypi.yml  test-on-pr.yml
deckhouse/: tests.py  utils.py
deckhouse_sdk/: values.py
shell_operator/: hook.py  module.py  values.py
src/shell_operator/: __init__.py  hook.py  kubernetes.py  metrics.py  storage.py  values.py
tests/: kubernetes_test.py  noop_test.py  values_test.py
