[tool.poetry]
name = "shell-operator"
version = "0.0.6"
description = "Python SDK for Shell Operator hooks"
authors = ["Eugene Shevchenko <evgeny.shevchenko@flant.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "shell_operator"}]

[tool.poetry.dependencies]
python = "^3.10"
dictdiffer = "^0.9.0"
dotmap = "^1.3.30"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.10"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
