[tool.poetry]
name = "deckhouse-sdk"
version = "0.3.1"
description = "Python SDK for Shell Operator hooks"
authors = ["Eugene Shevchenko <evgeny.shevchenko@flant.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "deckhouse_sdk"}]


[tool.poetry.dependencies]
python = "^3.7.2"
dictdiffer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.10"
pytest = "^7.2.0"
dotmap = "^1.3.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
